--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 <!--            <artifactId>spring-ai-starter-vector-store-mongodb-atlas</artifactId>-->
 <!--        </dependency>-->
 
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.ai</groupId>-->
+<!--                <artifactId>spring-ai-starter-mcp-server-webflux</artifactId>-->
+<!--            </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
