--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: springai
   ai:
     openai:
-      api-key: #{OPENAI_API_KEY}
+      api-key: ${OPENAI_API_KEY}
       chat:
         options:
           model: gpt-4.1-nano #the cheapest model on openai
