--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-advisors-vector-store</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-vector-store-mongodb-atlas</artifactId>
+        </dependency>
 <!--        common spring framework-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
